made counts and list of categories dynamic

--- a/templates/assets/css/custom.css
+++ b/templates/assets/css/custom.css
@@ -36,12 +36,12 @@ h3 {
   background: none !important;
 }
 .navbar-brand {
-  /* padding: 10px 0 0 0; */
+  padding: 10px 0 0 0;
   color: white;
 }
-/* .navbar-nav > li > a { */
-/* padding: 10px 10px 0 10px; */
-/* } */
+.navbar-nav > li > a {
+  padding: 10px 10px 0 10px;
+}
 
 .block {
   background: #ffffff;
