added dynamic display of single topic with repliesand total posts count

--- a/templates/assets/css/custom.css
+++ b/templates/assets/css/custom.css
@@ -83,6 +83,14 @@ h3 {
   width: 100%;
 }
 
+.topic-info {
+  font-size: 12px;
+}
+
+.topic-body {
+  margin-top: 10px;
+}
+
 img.avatar {
   width: 100%;
 }
